--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,10 @@ python-dotenv==1.0.0
 pyjwt==2.8.0
 cryptography==41.0.7
 pytz==2023.3
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+httpx==0.25.2
+faker==20.1.0
+freezegun==1.2.2
 
