--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ python-dotenv==1.0.0
 pyjwt==2.8.0
 cryptography==41.0.7
 pytz==2023.3
+psycopg2-binary==2.9.9
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
